--- a/JS_Homework/index.html
+++ b/JS_Homework/index.html
@@ -7,14 +7,6 @@
     <title>Homework</title>
 </head>
 <body>
-    <script defer>
-        console.log('The first step');
-    </script>
-    <script async>
-        console.log('Are taken');
-    </script>
-    <script defer>
-        console.log('Hurrra!!!');
-    </script>
+    <script defer src="hw_2.js"></script>
 </body>
 </html>
